feat: implement docs
